force-app/main/default/objects/npsp__Grant_Deadline__c/fields/npsp__Grant_Deadline_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Grant_Deadline_Due_Date__c</fullName>
    <description>The date this Deliverable is due.</description>
    <inlineHelpText>Das Datum, an dem diese Lieferung fällig ist.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>