force-app/main/default/objects/npsp__Grant_Deadline__c/fields/npsp__Grant_Deliverable_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp__Grant_Deliverable_Close_Date__c</fullName>
    <description>The date this Deliverable was actually submitted.</description>
    <inlineHelpText>Das Datum, an dem diese Lieferung tatsächlich übermittelt wurde.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>