force-app/main/default/objects/npsp__Grant_Deadline__c/fields/npsp__Grant_Deliverable_Requirements__c.field-meta.xml
<CustomField>
    <fullName>npsp__Grant_Deliverable_Requirements__c</fullName>
    <description>Description of what is required for this Deliverable.</description>
    <inlineHelpText>Beschreibung dessen, was für diese Lieferung erforderlich ist.</inlineHelpText>
    <label>Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>